--- a/essay.Rmd
+++ b/essay.Rmd
@@ -37,9 +37,6 @@ knitr::opts_chunk$set(echo = TRUE,
 &nbsp;
 &nbsp;
 
-<!-- \newline -->
-<!-- \newline -->
-
 The LATE theorem is a cornerstone of identification in economics and labour economists in particular have popularised and preached its virtues. Considering the theorem's importance relatively little effort has been expended ensuring the theorem's assumptions are met in the dataset in question. This essay aims to promote a practical methodology that can be incorporated into current instrumental variables workflow in order to clearly aid researchers in verifying that necessary, but not sufficient, conditions are met empirically in the sample.
 
 Checking that the first stage "goes the right way" through the use of interaction terms or subsampling is common knowledge amongst applied practitioners but rarely discussed in depth. I formalise this notion and present some novel contributions of potential interest to social science researchers using saturated first stage regressions and negative log-log $p$-value transforms popularised by genome wide association studies (GWAS) to present visually striking evidence for or against monotonicity. Next, I show how advances in causal econometric inference using machine learning techniques, developed by @Wager_and_Athey, can be adapted to estimate the underlying first-stage heterogeneity and provide an alternative to the saturated regression model. I explore test power in simulations under a range of data generating processes and find promising results; test power approaches 100\% in large datasets even at low levels of defiance. 
@@ -66,7 +63,7 @@ library(broom)
 library(grf)
 library(StepwiseTest)
 library(modelr)
-
+set.seed(1234)
 ```
 
 
@@ -928,25 +925,26 @@ sim_bin_nl %>%
 
 ## Size Simulations
 
+### Saturated First Stage
 Test size, typically denoted by $\alpha$, is set by the analyst and corresponds to the probability of incorrectly rejecting a true null hypothesis. When performing simultaneous inferences a common concern is that test properties at the individual level, usually an error rate, no longer hold on aggregate. To combat this concern we now examine test size using 2000 simulation draws under the null hypothesis - where no defiers are present. Rather than simulate this for all three datasets I simply use the smallest in order to save on computational cost.
 
 
 ```{r size_sims}
 p.adjust_df <- function(p, method, n){
-  df <- p.adjust.methods %>% 
+  df <- method %>% 
     map_dfc(~p.adjust(p = p,
                       method = .x,
                       n = n))
-  colnames(df) <- p.adjust.methods
+  colnames(df) <- method
   return(df)
 }
 
-source("size simulation script.R")
+source("sfs_size_sim.R")
 adjusted_pvals_cov <- new_size_sims_cov %>% 
   nest(-draw) %>% 
   mutate(adjusted_pvals = map(.x = data,
                                ~p.adjust_df(p = .x$pvals,
-                                         method = p.adjust.methods,
+                                         method = c("none", "fdr","holm"),
                                               n = 2^unique(.x$n_cov))))
 
 
@@ -972,7 +970,7 @@ tidy_adj_p_cov <- adjusted_pvals_cov %>%
    nest(-draw) %>% 
    mutate(adjusted_pvals = map(.x = data,
                                ~p.adjust_df(p = .x$pvals,
-                                            method = p.adjust.methods,
+                                            method = c("none", "fdr", "holm"),
                                             n = unique(.x$n_tiles)^unique(.x$n_cov))))
  
 tidy_adj_p_tiles <- adjusted_pvals_tile %>% 
@@ -1007,8 +1005,15 @@ ggplot(aes(y = empirical_alpha,
   geom_point() +
   scale_y_log10() +
   theme_minimal() +
-  geom_line(aes(y = theoretical_alpha), linetype = "longdash") +
-  geom_hline(yintercept = 0.05, linetype = 4)  
+  geom_line(aes(y = theoretical_alpha), linetype = "longdash", colour = "black") +
+  geom_hline(yintercept = 0.05, linetype = 4)  +
+  labs(x = "Number of Covariates",
+       y = "Empirical Alpha",
+       title = "Saturated First Stage Test Size Simulations",
+       caption = "Note: Dotted lines indicate theoretical test size after considering \n number of multiple comparisons and a test size of 0.05 respectively.",
+       colour = "Method") +
+  theme(legend.position = "bottom") +
+  scale_x_continuous(breaks = 1:10)
 ```
 
 
@@ -1023,8 +1028,15 @@ tidy_adj_p_tiles %>%
   geom_point() +
   scale_y_log10() +
   theme_minimal() +
-  geom_line(aes(y = theoretical_alpha), linetype = "longdash") +
-  geom_hline(yintercept = 0.05, linetype = 4) 
+  geom_line(aes(y = theoretical_alpha), linetype = "longdash", colour = "black") +
+  geom_hline(yintercept = 0.05, linetype = 4) +
+  labs(x = "Number of Quantile Bins",
+       y = "Empirical Alpha",
+       title = "Saturated First Stage Test Size Simulations",
+       caption = "Note: Dotted lines indicate theoretical test size after considering \n number of multiple comparisons and a test size of 0.05 respectively.",
+       colour = "Method") +
+  theme(legend.position = "bottom") +
+  scale_x_continuous(breaks = 2:9)
 ```
 
 In the figure below I introduce a visualisation technique possibly unfamiliar to most economists. The empirical CDF of $p$-values is plotted against its theoretical (uniform) quantiles on the negative log scale. The diagonal black line indicates perfect equality between the empirical and theoretical CDF.
@@ -1035,203 +1047,58 @@ A strong, positive first stage would result in a near horizontal empirical CDF -
 
 This exercise, whilst not offering a definitive answer to defier presence, is useful to an applied researcher. Later in the essay, when we take the tests to the data, we can visualise the strength of the instrument's effect on inducing compliers to take up treatment, in a normalised manner invariant to scale effects, and also get a sense of how this strength varies heterogeneously within the sample or even whether there's initial evidence of defiance.
 
-```{r ecdf_unif_size}
-simulations_size %>% 
-  filter(pct_defiers_true == 0) %>% 
-  ggplot(aes(sample = pval_defier,
-             colour = model)) +
-  stat_qq(distribution = qunif) +
-  geom_abline(intercept = 0, slope = 1) +
-  scale_y_continuous(trans = negative_log_trans(10)) +
-  scale_x_continuous(trans = negative_log_trans(10)) +
-  theme_minimal() +
-  facet_wrap(~model) +
-  guides(colour = "none") +
-  labs(title = "QQ plot of Simulated P-values",
-       caption = "Note: Both axes use a negative log(10) scale.")
-
-```
 
 
 Simulation results clearly show test size $\leq \alpha$ without any additional control procedures. Next, I provide further evidence that a Romano-Wolf adjustment would be too conservative.
-```{r checks_size, results = "asis"}
-simulations_size %>% 
-  rename(Model = model) %>% 
-  group_by(Model) %>% 
-  filter(pval_defier < 0.05) %>% 
-  summarise("Number of Test Draws" = nrow(simulations_size)/2,
-            "Number of Significant Tests" = n(),
-            "Proportion Significant" = `Number of Significant Tests` / `Number of Test Draws`,
-            "Alpha" = 0.05) %>% 
-  gt() %>% 
-  fmt_percent(
-    columns = c("Proportion Significant",
-                "Alpha")
-  ) %>% 
-  tab_header(
-    title = "Size Simulations"
-  )
 
+
+### Honest Causal Forest
+
+
+```{r}
+source("rf_size_sim.R")
 ```
 
 
-### Romano-Wolf
-
-It's difficult to implement Romano and Wolf's resampling multiple adjustment procedure with one-sided tests in R - instead I offer suggestive evidence that the procedure is too conservative when considering one draw of the data generated under a two-sided null hypothesis. Full proof via simulation would require simulating $N$ datasets and resampling each dataset $n$ times to form Romano-Wolf adjusted critical values which is omitted in this essay for computational reasons.
+```{r}
 
 
-```{r romano_wolf_sims}
-
-positive_sim_data <- create_fake_data(N = 1000,
-                 model_betas = rep(0, 10),
-                 force_positive = TRUE)
-
-positive_sim_model <- positive_sim_data %>%
-  select_at(vars(-contains(":"), -`(Intercept)`)) %>% 
-  run_first_stage_interactions_fast(.,
-                                    "D",
-                                    "Z")
-
-anon_function <- function(dummy_arg, data){
-  data %>% 
-    select_at(vars(-contains(":"),
-                   -"(Intercept)")) %>% 
-    resample_bootstrap() %>% 
-    as.data.frame() %>% 
-    run_first_stage_interactions_fast(.,
-                                      "D",
-                                      "Z") %>% 
-    select(t_stat) %>% 
-    pull()
-}
-plan(multisession)
-model_boot <- 1:500 %>% 
-  future_map_dfc(.,
-                 anon_function,
-                 data = positive_sim_data,
-                 .progress = FALSE,
-                 .options = future_options(
-                   globals = c("positive_sim_data",
-                               "run_first_stage_interactions_fast",
-                               "find_SEs"),
-                   packages = c("dplyr",
-                                "modelr",
-                                "margins")
-                 )) %>% 
-  as.matrix()
-plan(sequential)
-adjusted_val <- FWERkControl(test_stat = positive_sim_model$t_stat,
-                             boot_stat = model_boot,
-                             k = 1,
-                             alpha = 0.05)
+rf_size_sims %>% 
+  mutate(reject_null = ifelse(pval_one_neg < 0.05, TRUE, FALSE)) %>% 
+  summarise(n_rejected = sum(reject_null),
+            n_draws = n(),
+            proportion_rejected = n_rejected/n_draws)
 
 
 
-
-
-sim_first_stage_forest <- function(dataset){
-  forest_sim <- dataset %>% 
-    select_at(vars(contains("V"), -contains(":"))) %>% 
-    as.matrix() %>% 
-    causal_forest(X = .,
-                  Y = dataset$D,
-                  W = dataset$Z,
-                  num.trees = 4000) %>% 
-    predict(., estimate.variance = TRUE) %>% 
-    as_tibble() %>% 
-    mutate(sigma_hat = sqrt(variance.estimates),
-           prediction_lo = predictions - 1.96*sigma_hat,
-           prediction_hi = predictions + 1.96*sigma_hat,
-           t_stat = predictions / sigma_hat,
-           pval_one_neg = pnorm(t_stat),
-           pval_one_pos = pnorm(-t_stat),
-           row_id = row_number())
-  return(forest_sim)
-}
-
-positive_sim_model_rf <- sim_first_stage_forest(positive_sim_data)
-
-
-anon_function_rf <- function(dummy_arg,
-                             data){
-    data %>% 
-    resample_bootstrap() %>% 
-    as.data.frame() %>% 
-    sim_first_stage_forest(.) %>% 
-    select(t_stat) %>% 
-    pull()
-}
-run_sim <- FALSE
-if (run_sim){
-  plan(multisession)
-  model_boot_rf <- 1:500 %>% 
-    future_map_dfc(.,
-                   anon_function_rf,
-                   data = positive_sim_data,
-                   .progress = TRUE,
-                   .options = future_options(
-                     globals = c("positive_sim_data",
-                                 "sim_first_stage_forest"),
-                     packages = c("dplyr",
-                                  "modelr",
-                                  "grf")
-                   )) %>% 
-    as.matrix()
   
-  
-  plan(sequential)
-  # write.csv(model_boot_rf, "C:/Users/edjee/Dropbox/Ed/romano_wolf_rf.csv",
-  #           row.names = FALSE)
-} else {
-  model_boot_rf <- readr::read_csv("C:/Users/edjee/Dropbox/Ed/romano_wolf_rf.csv") %>% 
-    as.matrix()
-}
+holm_adjusted_pvals <- seq(from = 1000, to = 1000000, by = 1000) %>% 
+  map_df(~p.adjust_df(n = ., method = c("none", "fdr", "holm"), p = rf_size_sims$pval_one_neg) %>% 
+           mutate(n = .x))
 
-adjusted_val_rf <- FWERkControl(test_stat = positive_sim_model_rf$t_stat,
-                             boot_stat = model_boot_rf,
-                             k = 1,
-                             alpha = 0.05)
+holm_adjustment_summary <- holm_adjusted_pvals %>% 
+  gather(method, pval, -n) %>% 
+  mutate(reject_null = ifelse(pval < 0.05, TRUE, FALSE)) %>% 
+  group_by(method, n) %>% 
+  summarise(empirical_alpha = sum(ifelse(reject_null, 1, 0)) / n())
 
+holm_adjustment_summary
 
-rf_row <- bind_cols(
-  adjusted_val_rf$CV %>% 
-    enframe() %>% 
-    select("Adjusted Critical Value" = value),
-  positive_sim_model_rf %>% 
-    summarise("Original Critical Value" = qt(0.95, df = nrow(positive_sim_data) - 10),
-              "Max Test Statistic" = max(t_stat),
-              "Proportion Significant" = sum(ifelse(t_stat > 1.65, 1, 0))/nrow(positive_sim_data),
-              "Test" = "Causal Forest")
-)
-
-sfs_row <- bind_cols(
-  adjusted_val$CV %>% 
-    enframe() %>% 
-    select("Adjusted Critical Value" = value),
-  positive_sim_model %>% 
-  summarise("Original Critical Value" = qt(0.95, df = nrow(positive_sim_data) - 10),
-            "Max Test Statistic" = max(t_stat),
-            "Proportion Significant" = sum(ifelse(t_stat > 1.65, 1, 0))/nrow(positive_sim_data),
-            "Test" = "Saturated First Stage"))
-
-
-bind_rows(sfs_row,
-          rf_row) %>% 
-  gt() %>% 
-  fmt_number(columns = c("Adjusted Critical Value",
-                         "Original Critical Value",
-                         "Max Test Statistic"),
-             decimals = 2) %>% 
-  fmt_percent(
-    columns = "Proportion Significant"
-  ) %>%
-    tab_header(
-    title = "Romano-Wolf Adjustment"
-  ) 
-
-
-
+holm_adjustment_summary %>%  
+  ggplot(aes(x = n, y = empirical_alpha, colour = method)) +
+  geom_line() + 
+  geom_hline(yintercept = 0.05, linetype = "longdash") +
+  scale_y_log10() +
+  theme_minimal() +
+  labs(x = "Multiple Comparison Adjustments",
+       y = "Empirical Alpha",
+       title = "Honest Causal Forest Test Size Simulations",
+       caption = "Note: Dotted line indicates a test size of 0.05.",
+       colour = "Method") +
+  theme(legend.position = "bottom") +
+  scale_x_continuous(label = comma)
 ```
+
 
 &nbsp;
 
